Bug 242990 Crash when LDAP query results content none UTF8 characters r+sr=dmose, patch by wind.li@sun.com